# hex

./: CMakeLists.txt  README.md
include/: board.h  bot.h  constants.h  game_controller.h  thread_pool.h  types.h
src/: board.cpp  bot.cpp  game_controller.cpp  main.cpp  thread_pool.cpp
